<resources>

    <string name="app_name">Mula</string>
    <string name="ic_start_amount">Starting amount</string>
    <string name="et_start_amount">Enter starting amount</string>
    <string name="ic_end_amount">End amount</string>
    <string name="et_end_amount">Enter projected end amount</string>
    <string name="ic_years">Number of years</string>
    <string name="et_years">Enter number of years</string>
    <string name="ic_return_rate">Annual interest rate</string>
    <string name="et_return_amount">Enter return percentage</string>
    <string name="ic_additional_contribution">Additional Contribution</string>
    <string name="et_additional_contribution">Enter additional contribution</string>
    <string name="ic_total_contribution">Total Contribution</string>
    <string name="et_total_contribution">10,000</string>
    <string name="ic_times_compounded">Compounds per year</string>
    <string name="et_times_compounded">12</string>
    <string name="ic_interest_principal">Interest on Principal</string>
    <string name="et_interest_principal">10,000</string>
    <string name="ic_interest_contribution">Interest on Contribution</string>
    <string name="et_interest_contribution">12</string>
    <string name="ic_total_interest">Total Interest Earned</string>
    <string name="et_total_interest">10,000</string>
    <string name="ic_contribute">Future Value</string>
    <string name="hello_blank_fragment">Blank fragment</string>

</resources>
