<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/titleStartingAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/ic_start_amount"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_StartingAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:autofillHints=""
        android:hint="10,000"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleStartingAmount" />

    <TextView
        android:id="@+id/titleAdditionalContributions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:text="@string/ic_additional_contribution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleStartingAmount" />

    <EditText
        android:id="@+id/tv_AdditionalContributions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:autofillHints=""
        android:hint="10,000"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleAdditionalContributions" />

    <TextView
        android:id="@+id/titleReturnRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:text="@string/ic_return_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAdditionalContributions" />

    <EditText
        android:id="@+id/tv_ReturnRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter return rate"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_Years"
        app:layout_constraintTop_toTopOf="@+id/titleReturnRate" />

    <TextView
        android:id="@+id/titleTimesCompounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:text="@string/ic_times_compounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleReturnRate" />

    <EditText
        android:id="@+id/tv_TimesCompounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Compounds per year"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_Years"
        app:layout_constraintTop_toBottomOf="@+id/titleReturnRate" />

    <TextView
        android:id="@+id/titleYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:text="@string/ic_years"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTimesCompounded" />

    <EditText
        android:id="@+id/tv_Years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="10"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_StartingAmount"
        app:layout_constraintTop_toTopOf="@+id/titleYears" />


    <TextView
        android:id="@+id/titleFutureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/ic_contribute"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_calculate" />

    <TextView
        android:id="@+id/tv_FutureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="Total Future Value"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_Years"
        app:layout_constraintTop_toTopOf="@+id/titleFutureValue" />

    <TextView
        android:id="@+id/titleTotalContributions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/ic_total_contribution"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFutureValue" />

    <TextView
        android:id="@+id/tv_TotalContributions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_total_contribution"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_FutureValue"
        app:layout_constraintTop_toTopOf="@+id/titleTotalContributions" />

    <TextView
        android:id="@+id/titleInterestPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/ic_interest_principal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TotalContributions" />


    <TextView
        android:id="@+id/tv_InterestPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_interest_principal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_Years"
        app:layout_constraintTop_toTopOf="@+id/titleInterestPrincipal" />

    <TextView
        android:id="@+id/titleInterestContributions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/ic_interest_contribution"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_InterestPrincipal" />

    <TextView
        android:id="@+id/tv_InterestContributions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_interest_principal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_Years"
        app:layout_constraintTop_toTopOf="@+id/titleInterestContributions" />


    <TextView
        android:id="@+id/titleTotalInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/ic_total_interest"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_InterestContributions" />

    <TextView
        android:id="@+id/tv_TotalInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_total_interest"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_FutureValue"
        app:layout_constraintTop_toTopOf="@+id/titleTotalInterest" />


    <Button
        android:id="@+id/bt_calculate"
        android:layout_width="115dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:text="Calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleYears" />

    <Button
        android:id="@+id/bt_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="@+id/bt_calculate"
        app:layout_constraintStart_toEndOf="@+id/bt_calculate"
        app:layout_constraintTop_toTopOf="@+id/bt_calculate" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/pieFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTotalInterest"
        tools:layout="@layout/fragment_pie_chart" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/lineFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pieFragment"
        tools:layout="@layout/fragment_line_chart" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>